--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,43 +19,169 @@
     </header>
     <main>
         <div class="container">
-            <div class="about-activity-block">
+            <div class="about-activity-block screen">
                 <div class="row center-xs">
                     <div class="col-xs-4">
                         <h1>Right now:</h1>
                     </div>
                 </div>
+
                 <div class="row">
-                    <div class="col-xs-4 separated">
+                    <div class="col-xs-4 separated screen">
                         <p>IN QUEUE:<br>
                             256</p>
                     </div>
-                    <div class="col-xs-4 separated">
+                    <div class="col-xs-4 separated screen">
                         <p>PROCESSED:<br>
                             256</p>
                     </div>
-                    <div class="col-xs-4 separated">
-                        <p>IN AVERAGE:<br>
+                    <div class="col-xs-4 separated screen">
+                        <p>AVERAGE COUNT:<br>
                             256</p>
                     </div>
                 </div>
             </div>
-            <div class="user-information-block">
+            <!-- for-mobile -->
+            <!-- ----------------------------------- -->
+            <div class="about-activity-block mobile">
+                <div class="row center-xs">
+                    <div class="col-xs-12">
+                        <h1>Right now:</h1>
+                    </div>
+                </div>
+                <hr>
+                <div class="mobile row">
+                    <div class="col-xs-12">
+                        <p>IN QUEUE:<br>
+                            256</p>
+                    </div>
+                </div>
+                <hr>
+                <div class="mobile row">
+                    <div class="col-xs-12">
+                        <p>PROCESSED:<br>
+                            256</p>
+                    </div>
+                </div>
+                <hr>
+                <div class="mobile row">
+                    <div class="col-xs-12">
+                        <p>AVERAGE COUNT:<br>
+                            256</p>
+                    </div>
+                </div>
+                <hr>
+            </div>
+            <!-- ---------------------------------- -->
+            <div class="user-information-block screen">
                 <div class="row center-xs">
                     <div class="col-xs-6">
                         <h1>Become the next one!</h1>
                     </div>
                 </div>
                 <div class="row center-xs">
-                    <div class="col-md-8">
+                    <div class="col-xs-8">
                         <label for="user_link">Write the link to your VK page<br>
-                        <input placeholder="write the link..." type="text" id="user_link"></label>
+                            <input placeholder="write the link..." type="text" id="user_link"></label>
                     </div>
                 </div>
                 <div class="row center-xs" id="friend-form-row">
-                    <div class="col-md-8">
+                    <div class="col-xs-8">
                         <label for=:friend_link">Write the link to the VK page of the required person<br>
-                        <input placeholder="write the link..." type="text" id="friend_link"></label>
+                            <input placeholder="write the link..." type="text" id="friend_link"></label>
+                    </div>
+                </div>
+                <div class="row center-xs button-row">
+                    <button id="digest-button" class="col-xs-3">
+                        <p>DIGEST</p>
+                    </button>
+                </div>
+            </div>
+
+            <!-- for mobile -->
+            <div class="user-information-block mobile">
+                <div class="row center-xs">
+                    <div class="col-xs-12">
+                        <h1>Become the next!</h1>
+                    </div>
+                </div>
+                <div class="row center-xs">
+                    <div class="col-xs-10">
+                        <label for="user_link">Write the link to your VK page<br>
+                            <input placeholder="write the link..." type="text" id="user_link"></label>
+                    </div>
+                </div>
+                <div class="row center-xs" id="friend-form-row">
+                    <div class="col-xs-10">
+                        <label for=:friend_link">Write the link to the VK page of the required person<br>
+                            <input placeholder="write the link..." type="text" id="friend_link"></label>
+                    </div>
+                </div>
+                <div class="row center-xs button-row">
+                    <button id="digest-button" class="col-xs-3">
+                        <p>DIGEST</p>
+                    </button>
+                </div>
+            </div>
+            <!-- ---------------------------------- -->
+            <div class="relation-block">
+                <div class="row center-xs">
+                    <div class="col-xs-12">
+                        <h1>Your relations</h1>
+                    </div>
+                </div>
+                <div class="row center-xs relation-block-row">
+                    <div class="col-xs-10">
+                        <div class="relation-connection">
+                            <div class="first-user-name-block">
+                                <p>Kirill Ivanov</p>
+                            </div>
+                            <div class="handshake-view">
+                                <div>
+                                    <p class="relations-number">4<p>
+                                </div>
+                                <div class="shaking-img"></div>
+                            </div>
+                            <div class="second-user-name-block">
+                                <p>Andrew Bragin</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row center-xs relation-block-row">
+                    <div class="col-xs-10">
+                        <div class="relation-connection">
+                            <div class="first-user-name-block">
+                                <p>Kirill Ivanov</p>
+                            </div>
+                            <div class="handshake-view">
+                                <div>
+                                    <p class="relations-number">3<p>
+                                </div>
+                                <div class="shaking-img"></div>
+                            </div>
+                            <div class="second-user-name-block">
+                                <p>Andrew Bragin</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row center-xs relation-block-row">
+                    <div class="col-xs-10">
+                        <div class="relation-connection">
+                            <div class="first-user-name-block">
+                                <p>Kirill Ivanov</p>
+                            </div>
+                            <div class="handshake-view">
+                                <div>
+                                    <p class="relations-number">1<p>
+                                </div>
+                                <div class="shaking-img"></div>
+                            </div>
+                            <div class="second-user-name-block">
+                                <p>Andrew Bragin</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
