--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,11 +15,14 @@
 </head>
 
 <body>
+  <div class="additional-wrapper">
+   <div class="without-footer">
     <header>
         <p class="special-first">SIX</p>
         <p class="special-second">HANDSHAKES</p>
     </header>
     <main>
+    
         <div class="container">
             <div class="about-activity-block screen">
                 <div class="row center-xs">
@@ -225,8 +228,9 @@
                     </div>
                 </div>
             </div>
+        </div></main>
         </div>
-        <footer>
+        <div class="footer">
             <div class="row center-xs">
                 <div class="col-xs-3">
                     <p>footer</p>
@@ -239,8 +243,8 @@
                     <p>footer</p>
                 </div>
             </div>
-        </footer>
-    </main>
+        </div>
+    </div>
 
 </body>
 
