--- a/src/main/resources/static/style/six-hand.css
+++ b/src/main/resources/static/style/six-hand.css
@@ -1,3 +1,7 @@
+html{
+    height: 100%;
+}
+
 body{
     /* background: url("https://cdn.pixabay.com/photo/2018/03/20/03/11/northern-lights-3242090_1280.jpg"); */
     background: white;
@@ -6,12 +10,16 @@ body{
     background-attachment: fixed;
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
+    position: relative;
     margin:0px;
+    padding: 0px;
     flex-direction: column;
 }
 
+.additional-wrapper{
+    position: relative;
+    min-height: 100%;
+}
 header{
     height: 110px;
     position: fixed;
@@ -47,8 +55,13 @@ header p{
 
 main{
     width:100%;
-    top: 130px;
     position: relative;
+
+}
+
+
+.without-footer {
+    padding-bottom: 90px;
 }
 
 .about-activity-block, .user-information-block, .relation-block{
@@ -118,8 +131,9 @@ input:active, input:focus {
   }
 
 input{
-border: 0 solid ;
-height: 100px;
+    margin-bottom: 20px !important;
+    border: 0 solid ;
+    height: 100px;
 }
 
 #friend-form-row{
@@ -152,7 +166,7 @@ height: 100px;
 }
 
 .button-row{
-    margin-top: 15px;
+    margin-top: -5px;
 }
 
 .relation-block{
@@ -205,7 +219,7 @@ height: 100px;
 
 .container{
     overflow: hidden;
-    padding: 10px 10px 20px 10px;
+    padding: 10px 0px 20px 10px;
     width: 80%;
     background: rgb(228, 227, 224);
     border-radius: 3px;
@@ -213,29 +227,34 @@ height: 100px;
     -moz-box-shadow:    0px 0px 22px 0px rgba(50, 50, 50, 0.75);
     box-shadow:         0px 0px 22px 0px rgba(50, 50, 50, 0.75);
     margin-bottom: 50px;
+    padding-bottom: 90px;
+    margin-top: 150px;
 }
 
 .row .notification p, .row .notification-server p{
     font-size: 15px;
     color: #f50808;
     margin: 0px;
+    margin-bottom: 10px;
+
 }
 
 .row .notification-server-success p{
     font-size: 15px;
     color: #10a316;
     margin: 0px;
+    margin-bottom: 10px;
 }  
-footer{
-    width: 100%;
-    overflow: hidden;
-    color: rgb(231, 170, 78);
-    background:rgb(37, 37, 36);
-    font-family: 'Montserrat', sans-serif;
-    font-size: 15px;
-    position: static;
-    bottom: 0px;
-}
+.footer{
+        color: rgb(231, 170, 78);
+        background:rgb(37, 37, 36);
+        font-family: 'Montserrat', sans-serif;
+        font-size: 15px;
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 80px;}
 
 body{
     height: 100%;
@@ -255,7 +274,9 @@ body{
     }
 
     .mobile hr{
-        border: 1px solid rgb(73, 73, 73);
+        border: 1px solid rgb(150, 150, 150);
+        box-shadow: 0 -1px 0px 1px rgba(0,0,0,0.15);
+
     }
 
     #digest-button:hover, .relation-connection:hover{
@@ -289,14 +310,14 @@ body{
     .relation-block .relation-connection{
         border: 0px;
         border-radius: 0;
-        border-bottom: 2px solid black;    
+        border-bottom: 1px solid rgb(150, 150, 150);
         flex-direction: column;
         font-size: 15px;
         box-shadow: none;
     }
 
     #first-connection{
-        border-top: 2px solid black;  
+        border-top: 1px solid rgb(150, 150, 150);
         margin-top: 20px;
     }
 
