--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -192,13 +192,16 @@
             </main>
         </div>
         <div class="footer">
-            <div class="row center-xs">
-                <div class="col-xs-10">
-                    <p>Made by <a href="https://github.com/EugeneTheDev" class="developer-a">EugeneTheDev</a> and <a href="
-https://github.com/KirillIvano" class="developer-a">KirillIvano</a></p>
+            <div class="container-fluid">
+                <div class="row center-xs">
+                    <div class="col-xs-10">
+                        <p>Made by <a href="https://github.com/EugeneTheDev" class="developer-a">EugeneTheDev</a> and <a href="
+    https://github.com/KirillIvano" class="developer-a">KirillIvano</a></p>
+                    </div>
                 </div>
             </div>
         </div>
+    </div>
     </div>
 
 </body>
